--- a/src/libSubtitleFontHelper/libSubtitleFontHelper.vcxproj.filters
+++ b/src/libSubtitleFontHelper/libSubtitleFontHelper.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="FreeTypeFontMetadata.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FTFontInfo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
