refactored font matching routines; reply every query with a list of fonts for fonts with different weights

--- a/src/libSubtitleFontHelper/libSubtitleFontHelper.vcxproj.filters
+++ b/src/libSubtitleFontHelper/libSubtitleFontHelper.vcxproj.filters
@@ -38,10 +38,10 @@
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="FreeTypeFontMetadata.cpp">
+    <ClCompile Include="FTFontInfo.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="FTFontInfo.cpp">
+    <ClCompile Include="UtilityFunctions.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
